Fixed the errors that were in my previous commit
Fixed the errors that were in my previous commit

--- a/page3.html
+++ b/page3.html
@@ -20,6 +20,9 @@
             <p>email: rocket@gmail.com</p>
             <p>cell: +1 555 555-5555</p>
             <p>address: 123 front st<br>Unit #1<br>Dakota City</p>
+
+            <a class="Button Edit">Edit</a>
+            <a class="Button Close">Close</a>
         </div>
     </div>
 </body>
